# simple-student-information-system

./: README.md
backend/: pyproject.toml
